started swagger doc at /apidocs/ and fixed some image wall spacing

--- a/SteadFastWebApp/src/app/operation/operation-list/operation-list.component.scss
+++ b/SteadFastWebApp/src/app/operation/operation-list/operation-list.component.scss
@@ -8,7 +8,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-items: baseline;
+  align-items: flex-start;
 }
 
 a {
@@ -16,22 +16,21 @@ a {
 }
 
 .item {
-  flex-grow: 2;
-  flex-shrink: 1;
+  flex: 1;
 }
 
 .card {
   color: white;
   background-color: #1E2022;
   border-color: rgb(88, 97, 66);
-  
+
   border-width: 0.2rem;
-  border-top-width: 0rem;
-  border-left-width: 0rem;
-  border-right-width: 0rem;
+  border-top-width: 0.2rem;
+  border-left-width: 0.2rem;
+  border-right-width: 0.2rem;
 
   border-bottom-left-radius: 1em;
   border-bottom-right-radius: 1em;
-  margin: 0.5em;
+  margin-top: 1em;
   max-width: 20rem;
 }
